# Tsuka

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
.github/workflows/: Windows.yml  linux.yml  windows.yml
inc/: IO.hpp  Process.hpp
src/: IO.cpp  Process.cpp  main.cpp
